syntax = "proto3";

package greet;

option go_package = "github.com/tzuhsitseng/labs-grpc-go/greet/proto";

message GreetRequest {
  string first_name = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse);
  rpc GreetWithDeadline(GreetRequest) returns (GreetResponse);
}